--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
 	"recentlyLeft": {
-		"text": "[nb], le nombre de matériaux données à la communauté depuis:"
+		"text": "Déjà [nb] matériaux données à la communauté !"
 	}
 }
