--- a/settings.json
+++ b/settings.json
@@ -2,5 +2,5 @@
 	"recentlyLeft": {
 		"text": "Déjà [nb] matériaux données à la communauté !"
 	},
-	"proViewEnabled": true
+	"proViewEnabled": false
 }
