--- a/settings.json
+++ b/settings.json
@@ -3,5 +3,6 @@
 		"text": "Déjà [nb] matériaux données à la communauté !"
 	},
 	"proViewEnabled": false,
-	"proAppEnabled": false
+	"proAppEnabled": false,
+	"proAppAllowedMinVersion": "1.0.0",
 }
