--- a/desktop-pro/update_manifest.neu.json
+++ b/desktop-pro/update_manifest.neu.json
@@ -2,6 +2,5 @@
     "applicationId": "com.cyclezero.desktop.pro",
     "version": "1.0.0",
     "resourcesURL": "https://cyclezero-static-api.github.io/public-static/desktop-pro/update_res.neu",
-    "data": {
-    }
-}v
+    "data": {}
+}
