--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
 	"recentlyLeft": {
-		"text": "Déjà [nb] matériaux données à la communauté !"
+		"text": "Déjà [nb] matériaux donnés à la communauté !"
 	},
 	"proViewEnabled": true,
 	"proAppEnabled": true,
